# avr25-mle-trafic-cycliste

./: .dockerignore  .env.local  .env.template  .flake8  .gitignore  AGENTS.md  Makefile  README.md  data.dvc  docker-compose.airflow3.yaml  docker-compose.yaml  dvc.yaml  issue66_artifact_manifest_emission.patch  noxfile.py  params.yaml  pyproject.toml
.dvc/: config  config.local.bak
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  user_story.md
.github/workflows/: ci_branch.yml  ci_main.yml
.vibe/: config.toml
.vibe/skills/story-implementation-workflow/: SKILL.md
config/: bike_dag_config.json
dags/: bike_traffic_orchestrator_dag.py  bike_traffic_pipeline_dag.py  bike_trafic_pipeline_dag.py  ml_pipeline.py
data/final/: .gitignore  Sebastopol_N-S_integration.dvc  Sebastopol_N-S_integration_day1.dvc  Sebastopol_N-S_integration_day2.dvc  Sebastopol_N-S_mlops.dvc  Sebastopol_N-S_mlops_day0.dvc  Sebastopol_N-S_mlops_day3.dvc
data/final/Sebastopol_N-S_v2/: X_test.csv  X_test_dates.csv  X_train.csv  X_train_dates.csv  y_full.csv  y_test.csv  y_test_pred.csv  y_train.csv  y_train_pred.csv
data/interim/: .gitignore  Sebastopol_N-S_integration.dvc  Sebastopol_N-S_integration_day1.dvc  Sebastopol_N-S_integration_day2.dvc  Sebastopol_N-S_mlops.dvc  Sebastopol_N-S_mlops_day0.dvc  Sebastopol_N-S_mlops_day3.dvc
data/interim/Sebastopol_N-S_v2/: initial.csv
data/processed/: .gitignore  Sebastopol_N-S_integration.dvc  Sebastopol_N-S_integration_day1.dvc  Sebastopol_N-S_integration_day2.dvc  Sebastopol_N-S_mlops.dvc  Sebastopol_N-S_mlops_day0.dvc  Sebastopol_N-S_mlops_day3.dvc  initial_Sebastopol_N-S.csv  initial_Sebastopol_N-S_with_feats.csv
data/processed/Sebastopol_N-S_v2/: initial_with_feats.csv
data/raw/: .gitignore  comptage-velo-donnees-compteurs-2024-2025_Enriched_ML-ready_data.csv.dvc
docker/airflow/: variables.json
docker/dev/: Makefile  README.md  docker-compose.yaml
docker/dev/airflow/: connections.json  pools.json  variables.json
docker/dev/alertmanager/: alermanager.yml  alertmanager.yml
docker/dev/api/: Dockerfile  requirements.txt
docker/dev/job-runner/: Dockerfile
docker/dev/ml/: Dockerfile  requirements.txt
docker/dev/ml-gateway/: nginx.conf
docker/dev/mlflow/: Dockerfile
docker/dev/prometheus/: alert_rules.yml  prometheus.yml
docker/prod/: Makefile  README.md  docker-compose.ml-services.yaml  docker-compose.yaml
docker/prod/alertmanager/: alertmanager.yml
docker/prod/api/: Dockerfile  requirements.txt
docker/prod/job-runner/: Dockerfile  requirements.txt
docker/prod/ml-gateway/: nginx.conf
docker/prod/prometheus/: alert_rules.yml  prometheus.yml
docs/: README.md  airflow-3-upgrade.md  airflow-job-runner-strategy.md  artifact-handoff-strategy.md  dependency-strategy.md  local-prod-network-topology.md  local-prod-runtime.md  ports-and-services.md  repository-structure.md  runtime-communication-matrix.md  runtime-security-boundaries.md
docs/architecture-references/: execution-and-artifact-promotion-contract.md  local-prod-network-topology.md  runtime-communication-matrix.md  runtime-security-boundaries.md
docs/assets/: README.md
docs/current-runtime-and-operations/: dependency-strategy.md  local-prod-runtime.md  ports-and-services.md  repository-structure.md  runtime-logging.md
docs/etl/: source_catalog.md
docs/next-phase-design/: airflow-job-runner-strategy.md  artifact-handoff-strategy.md  artifact-manifest-models.md  artifact-manifest-store.md  artifact-ml-pipeline-emission.md  ml-step-runner-boundary.md  phase-8-production-minimal-target.md
docs/remaining-work/: global-remaining-work.md  phase-10-etl-source-chain.md  phase-9-bounded-scale-out-contract.md
docs/remaining-work/phase-10-etl-contracts/: README.md  administrative_boundaries_source.yaml  bike_counts_source.yaml  weather_source.yaml  (+4 more)
models/: .gitignore  Sebastopol_N-S_integration.dvc  Sebastopol_N-S_integration_day1.dvc  Sebastopol_N-S_integration_day2.dvc  Sebastopol_N-S_mlops.dvc  Sebastopol_N-S_mlops_day0.dvc  Sebastopol_N-S_mlops_day3.dvc
models/Sebastopol_N-S_v2/: ar_transformer.pkl  hyperparams.json  metrics.json  pipe_model.pkl
monitoring/prometheus/: prometheus.yml
references/: archi_mlops_traffic_cycliste.md  data_params.md  features_params.md  models_parameters.md
reports/figures/: archi_mlops_traffic_cycliste_v1.md  archi_mlops_traffic_cyliste_v1.md
scripts/: configure_mlflow_env.py  scan_french_residuals.py
src/: test_config.py
src/api/: app.py  auth.py  config.py  main.py  schemas.py  serving.py
src/artifacts/: __init__.py  checksums.py  exceptions.py  manifest_emission.py  manifest_store.py  schemas.py
src/common/: __init__.py  env.py  logger.py  modeling_util.py  preprocessing_util.py
src/data/: import_raw_data.py  ingest_and_split.py  make_dataset.py  preprocessing.py
src/features/: build_features.py
src/job_runner/: __init__.py  api.py  dependencies.py  errors.py  executor.py  main.py  service.py  state.py
src/metrics/: __init__.py  pipeline_metrics.py
src/ml/: artifact_manifest_emission.py  test_config.py
src/models/: train_and_predict.py
src/monitoring/: metrics_push.py
src/pipeline/: __init__.py
tests/: __init__.py  conftest.py  test_job_runner_service_executor.py  test_ml_step_services.py
tests/acceptance/: __init__.py  test_prod_api_manifest_smoke.py  test_prod_compose_contracts.py
tests/api/: test_app.py  test_auth.py  test_config.py  test_main.py  test_schemas.py
tests/artifacts/: test_artifact_manifest_schemas.py  test_artifact_manifest_store.py  test_artifacts_manifest_emission.py  test_manifest_emission.py  test_manifest_store.py  test_schemas.py
tests/integration/: test_api.py  test_api_repeated_manifest_promotion.py  test_job_runner_api.py  test_load_api.py  test_pipeline.py  test_scenario.py  test_test_topology.py
tests/job_runner/: __init__.py  test_errors.py  test_executor.py  test_job_runner_api.py  test_service.py
tests/metrics/: test_pipeline_metrics.py
tests/ml/: test_artifact_manifest_emission.py  test_ml_manifest_coherence.py
tests/performance/: test_load_api.py
(+141 files in other folders)
