[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avr25-mle-trafic-cycliste"
version = "0.5.0"
description = "bike trafic science project for MLE April 2025 promotion"
authors = [
    { name = "Rémy CANAL", email = "remy.canal@live.fr" },
    { name = "Elias DJOUADI", email = "elias.djouadi@gmail.com" },
    { name = "Koldé HOUESSOU", email = "koladehouessou@gmail.com" }
]
license = "MIT"
requires-python = "==3.12.*"

# NOTE: no direct dependencies — all handled through optional profiles
dependencies = []

[project.optional-dependencies]

py312 = [
    "pandas==2.2.3",
    "scikit-learn==1.5.0",
    "xgboost==3.0.2",
    "pyproj==3.7.1",
    "scikit-optimize==0.10.2",
    "fastapi==0.116.1",
    "setuptools==67.8.0",
    "mlflow==2.14.1",
    "click==8.2.1",
]

test = [
    "pytest==8.3.5",
    "coverage==7.8.2",
    "pytest-cov==6.1.1",
    "flake8==7.2.0",
    "uvicorn==0.35.0",
]

dev = [
    "dvc-s3==3.2.2",
    "nox==2025.5.1",
    "uv==0.8.14",
    "pip==25.2",
    "apache-airflow==3.0.6",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Source = "https://github.com/zheddhe/avr25-mle-trafic-cycliste"

[tool.setuptools.packages.find]
exclude = ["tests*", "logs*"]

[tool.pytest.ini_options]
addopts = [
  "--cov",
  "--cov-report=html",
  "--cov-report=term"
]
testpaths = ["tests"]
markers = [
  "integration: end-to-end pipeline tests"
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
    "*/.vscode/*",
    "*/site-packages/*",
    "*/python_files/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]