[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avr25-mle-trafic-cycliste"
version = "0.7.0"
description = "bike trafic science project for MLE April 2025 promotion"
authors = [
    { name = "Rémy CANAL", email = "remy.canal@live.fr" },
    { name = "Elias DJOUADI", email = "elias.djouadi@gmail.com" },
    { name = "Koldé HOUESSOU", email = "koladehouessou@gmail.com" },
]
license = "MIT"
requires-python = "==3.12.*"
dependencies = []

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Source = "https://github.com/zheddhe/avr25-mle-trafic-cycliste"

[tool.uv]
package = false

[dependency-groups]
app = [
    "pandas==2.2.3",
    "scikit-learn==1.5.0",
    "xgboost==3.0.2",
    "pyproj==3.7.1",
    "scikit-optimize==0.10.2",
    "fastapi==0.116.1",
    "setuptools==67.8.0",
    "mlflow==2.14.1",
    "click==8.2.1",
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "uvicorn==0.35.0",
    "apache-airflow==3.0.6",
]

test = [
    { include-group = "app" },
    "pytest==8.3.5",
    "coverage==7.8.2",
    "pytest-cov==6.1.1",
    "pytest-env==1.1.3",
    "ruff>=0.15,<0.16",
]

dev = [
    { include-group = "test" },
    "dvc-s3==3.2.2",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "logs*"]

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=term",
]
testpaths = ["tests"]
markers = [
    "integration: end-to-end pipeline tests",
]
env = [
    "DISABLE_METRICS_PUSH=1",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
    "*/.vscode/*",
    "*/site-packages/*",
    "*/python_files/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".nox",
    "notebooks",
    "avr25_mle_trafic_cycliste.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
