[project]
name = "avr25-mle-trafic-cycliste"
version = "0.8.0"
description = "bike trafic science project for MLE April 2025 promotion"
license = "MIT"
requires-python = "==3.12.*"
dependencies = []

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Source = "https://github.com/zheddhe/avr25-mle-trafic-cycliste"

[tool.uv]
package = false

[dependency-groups]
app = [
    "pandas==2.2.3",
    "scikit-learn==1.5.0",
    "xgboost==3.0.2",
    "pyproj==3.7.1",
    "scikit-optimize==0.10.2",
    "fastapi==0.116.1",
    "mlflow==3.13.0",
    "click==8.2.1",
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "uvicorn==0.35.0",
    "apache-airflow==3.0.6",
]

test = [
    { include-group = "app" },
    "python-dotenv>=1.2.2",
    "pytest==8.3.5",
    "coverage==7.8.2",
    "pytest-cov==6.1.1",
    "pytest-env==1.1.3",
    "ruff>=0.15,<0.16",
]

dev = [
    { include-group = "test" },
    "dvc-s3==3.2.2",
]

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report=term"]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: component contract tests",
    "acceptance: production-like smoke tests against running services",
]
env = ["DISABLE_METRICS_PUSH=1"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/__init__.py", "*/.vscode/*", "*/site-packages/*", "*/python_files/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == '__main__':"]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
include = [ "src", "tests", "docker/dev/airflow/dag", "docker/prod/airflow/dag", ]
exclude = [ "**/node_modules", "**/.*", "**/__pycache__", ".venv", "build", "dist", ".ruff_cache", ".pytest_cache", "data", "models", ]
reportMissingImports = "error"
reportMissingTypeStubs = false
executionEnvironments = [ { root = "src", extraPaths = ["src"] }, { root = "tests", extraPaths = ["src", "tests"] }, { root = "docker/dev/airflow/dag", extraPaths = ["src", "docker/dev/airflow/dag"] }, { root = "docker/prod/airflow/dag", extraPaths = ["src", "docker/prod/airflow/dag"] }, ]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist", ".venv", "data", "models"]
src = [ "src", "tests", "docker/dev/airflow/dag", "docker/prod/airflow/dag", ]
include = [ "pyproject.toml", "src/**/*.py", "tests/**/*.py", "docker/dev/airflow/dag/**/*.py", "docker/prod/airflow/dag/**/*.py", ]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# select = [ "E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF", "A", "PT", "AIR", "FAST", ]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"